Fix bug on entrypoint