@@ -20,8 +20,8 @@ LABEL maintainer="JS Minet"
 ENV ZEPPELIN_VERSION master
 ENV BUILD_DEPS git tini 
 ENV DEBIAN_FRONTEND noninteractive
-ENV MAVEN_OPTS -Xmx1024m -Xms512m -XX:MaxPermSize=256m -Djava.awt.headless=true
-ENV MAVEN_ARGS -T2 -B -e
+ENV MAVEN_OPTS -Xmx2048m -Xms1024m -Djava.awt.headless=true
+ENV MAVEN_ARGS -B
 ENV MAVEN_PROFILE build-distr,spark-3.1,include-hadoop,hadoop3,spark-scala-2.12,web-angular
 # Example with doesn't compile all interpreters
 ENV MAVEN_PROJECT !groovy,!submarine,!livy,!hbase,!pig,!file,!flink,!ignite,!kylin
